css/style.css
body {
	background-color: white;
	position: relative;
	height: 100vh;
	width:100%;
	margin: 0;
	padding: 0;
	/*overflow: hidden;*/
}

/* Styles for front splashes */

#newPic_container {
	position: absolute;
	width: 100%;
	height: 100%;
	background-image: url('../images/2016_4_A.png');
	background-size: cover;
	display: block;
}

#gallery1 {
	display: block;					/* loading page with this display on so width of carousel is calculated */
	position: absolute;
	background-color:white;
	height: 100%;
	width: 100%;
}

#gallery1 .row {
	height: 100%;
	width:100%;
	position:relative;
	margin:0;
}

.clearFloat {
	width: 100%;
}

#carousel-container {
	height:100%;
}

.owl-carousel, .owl-stage-outer, .owl-stage {
	/*overflow:hidden;*/
	position: relative;
	height: 95vh;
}

.owl-item {
	position:relative;
	height: 100%;
	width: 100%;
	display: inline-block;
}

.owl-theme .owl-controls {
    display: inline-block;
    /*display: inline;*/
    font-size:1rem;
    color: gray;
    opacity:0.8;
}

.prev, .next {
	display: inline-block;
	position: relative;
	z-index: 150;
}

.owl-carousel-arrows {
	position: relative;
	z-index: 150;
}

.btn {
	background-color: white;
	color: lightgray;
	border: none;
	font-size:5rem;
	margin-top:50vh;
}

.frame {
	height: 100%;
	width: auto;
}

.painting {
	position: relative;
	height:100%;
	margin: 0;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, 0);
}

#portals {
	position: relative;
	width: 100%;
	height: 100%;
	display: none;
}

#dotRow {
	position:relative;
	width: 100%;
	height: 10rem;
}

/* Style for the square active areas on portal page */
.doorKnob {
	margin:1px;
	position: relative;
	width:2.5rem;
	height:2.5rem;
	background-color: darkgray;
	/*display: none;*/
}

.caption {
	color: darkgray;
}

@media (max-width: 400px) {
	#spacer {
		position: relative;
		height:0;
	}
}

@media (min-width: 700px) {
	#spacer {
		position: relative;
		height:30rem;
	}
}

